fix progressbar on IE

--- a/src/App.css
+++ b/src/App.css
@@ -236,6 +236,10 @@ input[type="text"]:focus {
   padding: 8px 35px !important;
   position: absolute;
   bottom: -25%;
+  left: 50%;
+  -ms-transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 
 .timer-start-button {
@@ -247,9 +251,14 @@ input[type="text"]:focus {
 
 .progressBar {
   width: 250px;
+  height: 250px;
   position: absolute;
-  top: 0;
+  top: 0px;
   z-index: -1;
+  left: 50%;
+  -ms-transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 
 .stopwatch-time {
@@ -258,11 +267,8 @@ input[type="text"]:focus {
 
 .stopwatch button {
   width: 140px;
-}
-
-.stopwatch-start,
-.stopwatch-reset {
-  padding: 8px 35px !important;
+  text-align: center;
+  padding: 8px 0 !important;
 }
 
 .stopwatch-reset,
@@ -289,16 +295,25 @@ input[type="text"]:focus {
 .lap {
   list-style-type: none;
   text-align: left;
+  padding: 0.3rem 0;
 }
 
 .lap > * {
   display: inline-block;
-  width: 33.3%;
   text-align: left;
 }
 
+.lap-index {
+  width: 25%;
+}
+
+.lap-total-time,
 .lap-diff {
-  font-size: 0.9rem;
+  width: 37.5%;
+}
+
+.lap-diff {
+  color: #3e7dd2;
   text-align: right;
 }
 
